NXP-13518: Fix userAction alignments + remove capitalize behavior

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/header.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/header.css
@@ -152,7 +152,9 @@ author: lkemen@nuxeo.com
 
 .nxHeader .userActions {
   float: left;
-  padding: .2em .4em }
+  line-height: 2.1em;
+  padding: 0 .5em;
+  text-transform: none }
 
 .nxHeader .userMenuActions {
   float: left;
